--- a/css/custom.css
+++ b/css/custom.css
@@ -32,3 +32,17 @@ h1, h2 {
     margin-top: 4px;
     font-size: 14px;
 }
+
+.emptyListAlert {
+    background-color: green;
+    text-align: center;
+    padding: 6px;
+    text-transform: uppercase;
+    font-weight: bold;
+    max-width: 400px;
+    margin: 0 auto;
+    color: white;
+    border-radius: 5px;
+    margin-top: 4px;
+    font-size: 14px;
+}
